Fix package manager, upgrade dependencies