@@ -1,16 +1,16 @@
 plugins {
-  kotlin("jvm") version "2.2.0"
-  kotlin("plugin.spring") version "2.2.0"
-  id("org.springframework.boot") version "3.5.3"
+  kotlin("jvm") version "2.4.0"
+  kotlin("plugin.spring") version "2.4.0"
+  id("org.springframework.boot") version "4.1.0"
   id("io.spring.dependency-management") version "1.1.7"
 }
 
 group = "hu.bme.sch"
-version = "1.0.3"
+version = "1.1.0"
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(24)
+    languageVersion = JavaLanguageVersion.of(25)
   }
 }
 
@@ -26,11 +26,10 @@ repositories {
 
 dependencies {
   implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
-  implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9")
+  implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3")
   implementation("org.springframework.boot:spring-boot-starter-security")
-  implementation("org.springframework.boot:spring-boot-starter-web")
+  implementation("org.springframework.boot:spring-boot-starter-webmvc")
   implementation("org.springframework.boot:spring-boot-starter-validation")
-  implementation("org.springframework.retry:spring-retry")
   implementation("org.springframework:spring-aspects")
   implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
   implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-csv")
@@ -45,7 +44,7 @@ dependencies {
 
 dependencyManagement {
   imports {
-    mavenBom("org.springframework.modulith:spring-modulith-bom:1.4.1")
+    mavenBom("org.springframework.modulith:spring-modulith-bom:2.1.0")
   }
 }
 
@@ -56,8 +55,25 @@ kotlin {
 }
 
 tasks.getByName<org.springframework.boot.gradle.tasks.bundling.BootBuildImage>("bootBuildImage") {
+  builder = "paketobuildpacks/builder-jammy-tiny:latest"
+
   environment = mapOf(
     "BP_NATIVE_IMAGE" to "false",
-    "BP_JVM_VERSION" to java.toolchain.languageVersion.get().asInt().toString()
+    "BP_JVM_AOTCACHE_ENABLED" to "true",
+    "BP_SPRING_AOT_ENABLED" to "false",
+    "BP_JVM_VERSION" to java.toolchain.languageVersion.get().asInt().toString(),
+
+    "LC_ALL" to "en_US.UTF-8",
+    "BPE_LC_ALL" to "en_US.UTF-8",
+
+    "BPE_BPL_JVM_THREAD_COUNT" to "50",
+    "BPE_BPL_JVM_HEAD_ROOM" to "5",
+    "BPE_BPL_JVM_LOADED_CLASS_COUNT" to "38000",
+
+    "TRAINING_RUN_JAVA_TOOL_OPTIONS" to "-XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders",
+
+    "BPE_PREPEND_JAVA_TOOL_OPTIONS" to "-XX:+UseSerialGC -XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders",
+    "BPE_DELIM_JAVA_TOOL_OPTIONS" to " ",
+    "BPE_APPEND_JAVA_TOOL_OPTIONS" to "-XX:ReservedCodeCacheSize=30M -Xss200K -Xlog:cds=info -Xlog:aot=info -Xlog:class+path=info -Dfile.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8",
   )
 }
